Fixed some layout of the buttons that weren't aligning percisely with CSS and Media Queries.
Added some textarea sizing functionality and line breaks when an operator is clicked.

reset the sizing of the textarea when the clear button is clicked.

--- a/WebCalculatorASPMVC/WebCalculatorASPMVC/wwwroot/css/calculator-keypad.css
+++ b/WebCalculatorASPMVC/WebCalculatorASPMVC/wwwroot/css/calculator-keypad.css
@@ -7,21 +7,21 @@
 /*Default CSS for Mobile Viewport*/
 #calculator-keypad-parent-card {
     width: 200px;
-    height: 250px;
+    height: 249px;
     margin: auto;
     border: solid 1px #000;
     box-shadow: 0px 0px 2px 1px #000;
 }
 /*Keypad Background Cover*/
 #calculator-card-body {
-    max-height: 206px;
+    max-height: 203.8px;
     margin: auto;
     background-color: #6c757d;
 }
 /*Keypad Enter Button*/
 #calculator-enter-btn {
     width: 100%;
-    height: 71px;
+    height: 69.6px;
 }
 /*Keypad Zero Button Style and Layout*/
 #calculator-zero-btn {
@@ -33,6 +33,7 @@
 /*Keypad Decimal Button Style and Layout*/
 #calculator-decimal-btn {
     width: 45px;
+    height: 40px;
 }
 /*Keypad One Button Style and Layout (to Align and Blend in with the Modified Zero Button)*/
 #calculator-keypad-one-btn {
